--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -6,7 +6,7 @@ jobs:
   build-app-e2e-tests:
     runs-on: ubuntu-latest
     #  run job only on master branch
-    if: ${{ github.ref == 'refs/heads/master' }}
+    if: ${{ github.ref == 'refs/heads/master' && github.event_name == 'pull_request' }}
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
