Enable to open searched files

--- a/features/browser/ui/src/main/AndroidManifest.xml
+++ b/features/browser/ui/src/main/AndroidManifest.xml
@@ -6,6 +6,15 @@
             android:name=".controller.SearchActivity"
             android:theme="@style/Theme.FilesViewer"
             android:exported="false" />
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.alon.filesviewer.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
     </application>
 
 </manifest>
