Provide searched files detail info

--- a/features/browser/ui/src/main/AndroidManifest.xml
+++ b/features/browser/ui/src/main/AndroidManifest.xml
@@ -3,9 +3,20 @@
 
     <application>
         <activity
+            android:name=".controller.BrowserActivity"
+            android:exported="true"
+            android:theme="@style/Theme.FilesViewer">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".controller.SearchActivity"
-            android:theme="@style/Theme.FilesViewer"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.FilesViewer" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.alon.filesviewer.provider"
