Add dedicated screen for all app permissions handling

--- a/features/browser/ui/src/main/AndroidManifest.xml
+++ b/features/browser/ui/src/main/AndroidManifest.xml
@@ -4,14 +4,8 @@
     <application>
         <activity
             android:name=".controller.BrowserActivity"
-            android:exported="true"
-            android:theme="@style/Theme.FilesViewer">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false"
+            android:theme="@style/Theme.FilesViewer" />
         <activity
             android:name=".controller.SearchActivity"
             android:exported="false"
